# bitbucket-server-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
examples/: repos.rs
src/: client.rs  lib.rs  prelude.rs
src/builder/: get.rs  mod.rs
src/client/: mod.rs
src/projects/: mod.rs
src/repos/: comments.rs  mod.rs
src/resources/: comments.rs  mod.rs  projects.rs  pullrequests.rs  repositories.rs  webhooks.rs
src/users/: mod.rs
