[package]
name = "bitbucket"
version = "0.1.1-alpha"
authors = ["Victor Palade <victor@cloudflavor.io>"]
edition = "2018"
readme = "README.md"
description = "Async bitbucket server bindings"
homepage = "https://github.com/cloudflavor/bitbucket-rs"
repository = "https://github.com/cloudflavor/bitbucket-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.4"
serde = "1.0.105"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["full"] }

