[package]
name = "bitbucket"
version = "0.1.2-alpha.1"
license = "Apache-2.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]

description = "Async bitbucket server bindings"
readme = "README.md"
homepage = "https://github.com/cloudflavor/bitbucket-rs"
repository = "https://github.com/cloudflavor/bitbucket-rs"
documentation = "https://docs.rs/crate/bitbucket"

edition = "2018"
keywords = ["bitbucket", "atlassian", "stash", "bitbucket-server"]
categories =["web-programming::http-client", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hyper = "0.13.4"
hyper-tls = "0.4.1"
serde = {version = "1.0.105", features = ["derive"]}

[dev-dependencies]
tokio = { version = "0.2.13", features = ["full"] }
mockito = "0.23.3"
