[package]
name = "bitbucket-server"
version = "0.1.0-alpha.1"
license = "Apache-2.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]

description = "Async bitbucket server bindings"
readme = "README.md"
homepage = "https://github.com/cloudflavor/bitbucket-server-rs"
repository = "https://github.com/cloudflavor/bitbucket-server-rs"
documentation = "https://docs.rs/crate/bitbucket-server"

edition = "2018"
keywords = ["bitbucket", "atlassian", "stash", "bitbucket-server"]
categories =["web-programming::http-client", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hyper = "0.14.13"
hyper-tls = "0.5.0"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }
